# dotmd

./: .eslintrc.json  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: index.html
src/: App.tsx  main.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EditorPane.tsx  PreviewPane.tsx  SaveToast.tsx  Toolbar.tsx
src/hooks/: useDebouncedValue.ts  useFileOperations.ts  useFontSize.ts  useKeyboardShortcuts.ts  useSplitPane.ts  useTheme.ts
src/utils/: clamp.ts  validation.ts
