[package]
name = "dotmd"
version = "0.1.0"
description = "A lightweight macOS markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "dotmd_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.0"
